syntax = "proto3";

package pb;

option go_package = "barbershop/src/pb/barber";


message DeleteBarberShopServiceCategoriesRequest{
    string id = 1;
}

message DeleteBarberShopServiceCategoriesResponse{
    string status = 1;
}